<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="br.com.iesb.posgraduacao.activity.CalcularRecisaoContratoActivity">

    <!--Último Salário-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ultimo_salario"
            android:id="@+id/tv_ultimo_salario"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_ultimo_salario"
            android:hint="Ex: 1500,00"/>

    <!--Cálculo dependentes-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dependentes"
            android:id="@+id/tv_quantidade_dependente"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <Spinner
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_dependentes"
            android:layout_gravity="left"/>

    <!-- Data de início de contrato de trabalho -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data_inicio_contrato"
            android:id="@+id/tv_dt_inicio_contrato"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <TextView
            android:id="@+id/tv_data_inicio_contrato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    <!-- Data de término de contrato de trabalho -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data_termino_contrato"
            android:id="@+id/tv_dt_termino_contrato"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <TextView
            android:id="@+id/tv_data_termino_contrato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

    <!-- Motivo do término de trabalho-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/motivo_termino_contrato"
            android:id="@+id/tv_motivo_termino_trabalho"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_motivo_termino_contrato"
            android:layout_gravity="left"
            />

    <!-- Férias Vencidas -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ferias_vencidas"
            android:id="@+id/tv_ferias_vencidas"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_ferias_vencidas">

        <RadioButton android:id="@+id/rb_ferias_vencidas_sim"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sim"/>

        <RadioButton android:id="@+id/rb_ferias_vencidas_nao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nao"
                     android:checked="true"/>
    </RadioGroup>

    <!-- Aviso prévio -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aviso_previo"
            android:id="@+id/tv_aviso_previo"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_aviso_previo">

        <RadioButton android:id="@+id/rb_aviso_previo_sim"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sim"/>

        <RadioButton android:id="@+id/rb_aviso_previo_nao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nao"
                     android:checked="true"/>
    </RadioGroup>

    <!--Botão Calcular -->
    <Button
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular_recisao"
            android:id="@+id/bt_calcula_recisao"
            android:onClick="calculaRecisaoClick"/>
</LinearLayout>
